<resources>
    <string name="app_name">DemoCBSEApp</string>
    <string name="data">Math</string>
    <string name="tvAvgScore">Class Average Score</string>
    <string name="tvStudentTaken">Student Taken Test</string>
    <string name="tvstudentName">StudentName</string>
    <string name="tvScore">Score</string>
    <string name="tvDate">Date</string>
    <string name="tvtestName">Test Name</string>
    <string name="tvStudents">Students</string>
    <string name="tvTestTaken">Test Taken:</string>
    <string name="tvrecent">Recent Test Taken</string>
    <string name="tvTestassigned">Test Assigned:</string>

    <string name="tvline">----------------------------------------------------------------------------------</string>
</resources>